--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+### Mine
+# Django
+db.sqlite3
+# package lock
+package-lock.json
+# webpack
+webpack-stats-local.json
+# react bundles
+static/bundles/
+# VS Code folder
+.vscode
+
 ### Python
 
 # Byte-compiled / optimized / DLL files
@@ -7,9 +19,6 @@ __pycache__/
 
 # C extensions
 *.so
-
-# Django
-db.sqlite3
 
 # Distribution / packaging
 .Python
@@ -110,9 +119,6 @@ venv.bak/
 
 ### Node.js
 
-# package lock
-package-lock.json
-
 # Logs
 logs
 *.log
@@ -176,7 +182,6 @@ typings/
 .next
 
 ### Visual Studio Code
-.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
