--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "es6-promise": "^3.1.2",
+        "react-ace": "^5.9.0",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.5.1",
         "radium": "^0.16.6",
