--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "babel-preset-react": "^6.5.0",
         "babel-preset-stage-0": "^6.5.0",
         "eslint": "^2.2.0",
+        "file-loader": "^1.1.6",
+        "image-webpack-loader": "^3.4.2",
         "react": "^0.14.7",
         "react-hot-loader": "^1.3.0",
         "redux-devtools": "^3.1.1",
