--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     },
     "dependencies": {
         "es6-promise": "^3.1.2",
-        "react-ace": "^5.9.0",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.5.1",
         "radium": "^0.16.6",
+        "react-ace": "^5.9.0",
         "react-cookie": "^0.4.5",
         "react-dom": "^0.14.7",
         "react-redux": "^4.4.0",
+        "react-tabs": "^2.2.1",
         "redux": "^3.3.1",
         "redux-thunk": "^1.0.3"
     }
