--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "lodash": "^4.5.1",
         "radium": "^0.16.6",
         "react-ace": "^5.9.0",
+        "react-bootstrap": "^0.32.1",
         "react-cookie": "^0.4.5",
         "react-dom": "^0.14.7",
         "react-redux": "^4.4.0",
