--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "dependencies": {
         "es6-promise": "^3.1.2",
         "js-cookie": "^2.2.0",
-        "lodash": "^4.5.1",
-        "radium": "^0.16.6",
         "react-ace": "^5.9.0",
         "react-cookie": "^0.4.5",
         "react-dom": "^0.14.7",
+        "react-draggable": "^3.0.5",
         "react-redux": "^4.4.0",
+        "react-sortable-hoc": "^0.6.8",
         "redux": "^3.3.1",
         "redux-thunk": "^1.0.3"
     }
