--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "webpack-dev-server": "^1.14.1"
     },
     "dependencies": {
+        "classnames": "^2.2.5",
         "es6-promise": "^3.1.2",
         "js-cookie": "^2.2.0",
         "react-ace": "^5.9.0",
