--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
         "webpack-dev-server": "^1.14.1"
     },
     "dependencies": {
-        "classnames": "^2.2.5",
+        "brace": "^0.11.1",
         "es6-promise": "^3.1.2",
         "js-cookie": "^2.2.0",
-        "react-ace": "^5.9.0",
         "react-cookie": "^0.4.5",
         "react-dom": "^0.14.7",
         "react-draggable": "^3.0.5",
+        "react-measure": "^2.0.2",
         "react-redux": "^4.4.0",
+        "react-split-pane": "^0.1.77",
         "react-sortable-hoc": "^0.6.8",
         "redux": "^3.3.1",
         "redux-thunk": "^1.0.3"
