--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     },
     "dependencies": {
         "brace": "^0.11.1",
+        "d3": "^5.0.0",
         "es6-promise": "^3.1.2",
         "js-cookie": "^2.2.0",
         "react-cookie": "^0.4.5",
         "react-dom": "^0.14.7",
         "react-draggable": "^3.0.5",
+        "react-faux-dom": "^4.1.0",
         "react-measure": "^2.0.2",
         "react-redux": "^4.4.0",
-        "react-sortable-hoc": "^0.6.8",
         "redux": "^3.3.1",
         "redux-thunk": "^1.0.3"
     }
