--- a/client/package.json
+++ b/client/package.json
@@ -3,37 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "babel-plugin-transform-decorators-legacy": "^1.3.5"
+        "parcel": "1.12.3",
+        "typescript": "3.3.4000"
     },
     "dependencies": {
-        "brace": "^0.11.1",
-        "js-cookie": "^2.2.0",
-        "react": "^16.4.0",
-        "react-dom": "^16.4.0",
-        "react-draggable": "^3.0.5",
-        "react-redux": "^4.4.0",
-        "react-scripts-parcel": "0.0.23",
-        "react-split-pane": "^0.1.77",
-        "redux": "^3.3.1",
-        "redux-thunk": "^1.0.3"
+        "brace": "0.11.1",
+        "js-cookie": "2.2.0",
+        "react": "16.8.5",
+        "react-dom": "16.8.5",
+        "react-draggable": "3.2.1",
+        "react-redux": "6.0.1",
+        "react-split-pane": "0.1.87",
+        "redux": "4.0.1",
+        "redux-thunk": "2.3.0"
     },
     "scripts": {
-        "start": "react-scripts-parcel start",
-        "build": "react-scripts-parcel build",
-        "test": "react-scripts-parcel test --env=jsdom",
-        "eject": "react-scripts-parcel eject"
-    },
-    "browserslist": {
-        "development": [
-            "last 2 chrome versions",
-            "last 2 firefox versions",
-            "last 2 edge versions"
-        ],
-        "production": [
-            ">1%",
-            "last 4 versions",
-            "Firefox ESR",
-            "not ie < 11"
-        ]
+        "start": "parcel serve --no-cache -d ./dist/ -p 1234 -- ./public/index.html"
     }
 }
